# SimpleORM

./: .gitignore  MAINTENANCE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
simpleorm/: __init__.py  base_model.py  db_util.py
tests/: __init__.py  test_base_model.py  test_db_util.py
